# sqlx-ssl-testing

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  init-ca.sh  measure.sh
migrations/: 0001_init.sql  0002_test_data.sql
src/: main.rs
