[package]
name = "sqlx-ssl-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }

[dependencies.sqlx]
version = "0.8.3"
features = [
    "postgres",
    "runtime-tokio",
     "tls-native-tls",
]
